--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio1/ejercicio.html">Ejercicio 1</a>
+    <a href="./ejercicio.html">Ejercicio 1</a>
 </body>
 </html>
