--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Ejercicios diseño de interfaces</h1>
     <a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio1/ejercicio.html">Ejercicio 1</a>
+    <a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio2/formulario.html">Ejercicio 2</a>
     
 </body>
 </html>
