--- a/ejercicio2/formulario.html
+++ b/ejercicio2/formulario.html
@@ -26,6 +26,8 @@
         </select>
         <p>Sobre su satisfaccion personal:</p>
         <textarea name="comentario" rows=10 cols=45></textarea>
+        <p><input type="checkbox" name=notificaciones>Desea recibir notificaciones de las novedades en las lineas de autobus.</p>
+        <p><input type="submit" value="Enviar"><input type="reset" value="Borrar"></p>  
     </form>
 </body>
 </html>
