--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Ejercicios diseño de interfaces</h1>
     <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio1/ejercicio.html">Ejercicio 1</a></p>
     <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio2/formulario.html">Ejercicio 2</a></p>
+    <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio3/tabla_ej3-1.html">Ejercicio 3</a></p>
     
 </body>
 </html>
