--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio3/tabla_ej3-1.html">Ejercicio 3.1</a></p>
     <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio3/tabla_ej3-2.html">Ejercicio 3.2</a></p>  
     <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio3/formulario_ej3-3.html">Ejercicio 3.3</a></p>
-    <p><a href=" https://github.com/gabrizz8998/dise-o_interfaces/ejercicio4/galeria.html">Ejercicio 4</a></p>
+    <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio4/galeria.html">Ejercicio 4</a></p>
    
 </body>
 </html>
