--- a/entrega/ejercicio1/index.html
+++ b/entrega/ejercicio1/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img id="inicio" src="imagenes/imagen.png" width=100%>
+        <img id="inicio" src="imagen.png" width=100%>
         <li style="list-style-type: none;">
             <ul><a href="#Datos_personales">Datos personales</a></ul>
             <ul><a href="#Formacion_académica">Formacion académica</a></ul>
