--- a/entrega/ejercicio2/PR0201 - Selectores CSS.html
+++ b/entrega/ejercicio2/PR0201 - Selectores CSS.html
@@ -10,7 +10,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
 	</script>
 	<![endif]-->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style_ej2.css">
 </head>
 <body>
 	<header>
