--- a/entrega/ejercicio3/selectores_basicos.html
+++ b/entrega/ejercicio3/selectores_basicos.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style_ej3.css">
     <title>Selectores</title>
 
 
 </head>
 
 <body>
-    <div id="banner"><img src="imagenes/centro.jpg" width="380" height="192" alt="CSS: The Missing Manual">
+    <div id="banner"><img src="centro.jpg" width="380" height="192" alt="CSS: The Missing Manual">
         
     </div>
     <hr>
