--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ejercicios diseño de interfaces</h1>
-    <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio1/ejercicio.html">Ejercicio 1</a></p>
+    <h1>Entrega PR0201_HTML5 Y SELECTORES</h1>
+    <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/entrega/ejercicio1/">Ejercicio 1</a></p>
     <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio2/formulario.html">Ejercicio 2</a></p>
     <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio3/tabla_ej3-1.html">Ejercicio 3.1</a></p>
     <p><a href="https://gabrizz8998.github.io/dise-o_interfaces/ejercicio3/tabla_ej3-2.html">Ejercicio 3.2</a></p>  
